app/assets/stylesheets/spree/frontend/spree_bootstrap_frontend.css.scss
//Add your custom bootstrap variables here, see https://github.com/twbs/bootstrap-sass/blob/master/vendor/assets/stylesheets/bootstrap/_variables.scss for full list of variables.

.dropdown-submenu {
  position:relative;
}

.dropdown-submenu>.dropdown-menu {
  top:0;
  left:100%;
  margin-top:-6px;
  margin-left:-1px;
  -webkit-border-radius:0 6px 6px 6px;
  -moz-border-radius:0 6px 6px 6px;
  border-radius:0 6px 6px 6px;
}

.dropdown-submenu:hover>.dropdown-menu {
  display:block;
}

.dropdown-submenu>a:after {
  display:block;
  content:" ";
  float:right;
  width:0;
  height:0;
  border-color:transparent;
  border-style:solid;
  border-width:5px 0 5px 5px;
  border-left-color:#cccccc;
  margin-top:5px;
  margin-right:-10px;
}

.dropdown-submenu:hover>a:after {
  border-left-color:#ffffff;
}

.dropdown-submenu.pull-left {
  float:none;
}

.dropdown-submenu.pull-left>.dropdown-menu {
  left:-100%;
  margin-left:10px;
  -webkit-border-radius:6px 0 6px 6px;
  -moz-border-radius:6px 0 6px 6px;
  border-radius:6px 0 6px 6px;
}


// Coalca variables

$coalca_yellow:                            #fbeb4d;

// Editing default variables

$navbar-default-bg:                        $coalca_yellow;
$navbar-default-color:                     #000;
$navbar-default-link-hover-color:          #000;
$navbar-default-link-hover-bg:             lighten($coalca_yellow, 30%);
$navbar-default-link-active-color:         #000;
$navbar-default-link-disabled-color:       #000;
$navbar-default-link-disabled-bg:          lighten($coalca_yellow, 20%);

$navbar-height:                            40px !default;

$navbar-default-link-color:                #444;
$navbar-default-border:                    darken($navbar-default-bg, 10%);

$brand-primary:                            darken($coalca_yellow, 35%);
$breadcrumb-bg:                            lighten($coalca_yellow, 30%);

$font-size-base:                           13px;

// Official bootstrap starts here

$icon-font-path: "../../bootstrap/";
@import "bootstrap";

// Coalca specific classes

.contact-form-line td {
  padding-bottom: 5px;
}

.taxonomy-root {
  font-size: $font-size-base;
  color: $link-hover-color;
}

// -- Spree Custom Header and Footer ---------------------
#spree-header {
  background: #fff;// #1c5c92 asset-url('spree_header.jpg') center center;
  //background-size: cover;
  margin-bottom: $line-height-computed;

  #header {
    background: #fff; //background: rgba(9, 22, 33, 0.4);
    padding-top: $line-height-computed;
    padding-bottom: 10px;
  }

  #logo {
    margin-bottom: 10px;
    padding-left: 0px;
    img {
      width: 256px;
    }
  }

  .navbar-default .nav li.dropdown.open .dropdown-toggle,
  .navbar-default .nav li.dropdown.active .dropdown-toggle,
  .navbar-default .nav li.dropdown .dropdown-toggle.active {
    background: lighten($coalca_yellow, 20%);
  }

  .navbar-default .nav ul.dropdown-menu {
    background: lighten($coalca_yellow, 15%);
  }

  .navbar {
    border: 0;
    margin-bottom: 0;
  }

}

#spree-footer {
  background: $gray-dark;
  padding-top: $padding-base-horizontal;
  margin-top: $line-height-computed;
  color: #fff;
}

.text-center > a > img {
  margin-bottom: 10px;
}

.coalca-info {
  font-size: 0.8em;
}

.iva-overview {
  font-size: 0.7em;
}

ol.terms {
  counter-reset: item;
}

ol.terms li {
  display: block;
  margin-bottom: 1em;
}

ol.terms li:before {
  content: counters(item, ".") " ";
  counter-increment: item;
}

// Existing card selection

table.existing-credit-card-list > tbody > tr > td {
  padding-right: 0.2em;
  padding-left: 0.2em;
}

table.existing-credit-card-list > tbody > tr > td:after {
  content: '/';
}

table.existing-credit-card-list > tbody > tr > td:last-child:after {
  content: '';
}

// -- Spree Layout Custom Rules -------------------------

//TODO, bug #6
.alert-error, .alert-registration_error { @extend .alert-danger; }
.alert-alert { @extend .alert-info; }

.product-body {
  height: 170px;
}
.progress-steps {
  margin-top: $line-height-computed;
}
h1 {
  margin-bottom: 30px;
}

// Wire transfer

.c_hidden {
  display: none;
}

.bt_payment_form  td{
  padding-top: 5px;
  padding-right: 7px;
}

.credit_cards {
  float: right;
}

.style-two {
    border: 0;
    border-bottom: 1px dashed #ccc;
    margin-bottom: 5px;
    margin-top: 5px;
}

#footer-center {
  margin-top: 10px;
  text-align: center;
}

.lower-menu {
  max-width: 400px;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 5px;
}

.lower-menu a {
  color: white;
  font-weight: bold;
}

.coalca-nav {
  ul {
    list-style-type: none;
  }
  li {
    list-style-type: none;
    margin-right: 50px;
    padding-bottom: 10px;
  }
  li:last-child {
    margin-right: 0px;
  }
}

// Sidebar adjustments

.list-group {
  border-bottom: 1px solid grey;
}

.list-group-item {
    border: none;
    padding-bottom: 5px;
    padding-top: 5px;
    padding-right: 5px;
    padding-left: 5px;
}

nav#taxonomies {
  h4 {
    border-bottom: 1px solid grey;
  }
}

// taxons

.subtaxon-title {
  div {
    padding-left: 0px;
    margin-bottom: 0px;
  }
  a {
    padding: 0px;
    padding-top: 5px;
    padding-bottom: 5px;
    background-color: $coalca_yellow;
    text-align: center;
  }
}

.subtaxon-section {
  padding-bottom: 15px;
  margin-bottom: 15px;
  min-height: 100px;
}

.user-info-area {
  padding-bottom: 15px;
}

